--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.banner{
+    background: url('./assets/Mask\ group.svg');
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center top;
+    height: 706px;
 }
+.check-banner{
+    background: url('./assets/Untitled@3-1536x735\ 1.png');
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center top;
+    /* height: 200px; */
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+}
+.ReactCollapse--collapse {
+    transition: height 500ms;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
